# semacaulk

./: .gitignore  11.hex  404.html  Cargo.toml  README.md  build_contracts.sh  circuit_and_gates.html  credits.html  cryptographic_specification.html  ethereum_contracts.html  fiat_shamir_transcript.html  gas_costs.html  index.html  insertion.html  lagrangeComms_11  lagrange_basis_polynomial_commitment_tree.html  mechanism_of_operation.html  out.hex  overview.html  performance_benchmarks.html  powersOfTau28_hez_final_12_g1_g2.hex  precomputation_and_updates.html  print.html  proof_generation.html  quick_start.html  searchindex.js  searchindex.json  system_invariants.html  trusted_setup.html  verification.html
.github/workflows/: ci.yml  publish.yml
docs/: book.toml
docs/src/: SUMMARY.md  circuit_and_gates.md  credits.md  cryptographic_specification.md  ethereum_contracts.md  fiat_shamir_transcript.md  gas_costs.md  insertion.md  lagrange_basis_polynomial_commitment_tree.md  mechanism_of_operation.md  overview.md  performance_benchmarks.md  precomputation_and_updates.md  proof_generation.md  quick_start.md  system_invariants.md  trusted_setup.md  verification.md
html/: 404.html  circuit_and_gates.html  credits.html  cryptographic_specification.html  ethereum_contracts.html  fiat_shamir_transcript.html  gas_costs.html  insertion.html  lagrange_basis_polynomial_commitment_tree.html  mechanism_of_operation.html  overview.html  performance_benchmarks.html  precomputation_and_updates.html  print.html  proof_generation.html  quick_start.html  searchindex.js  searchindex.json  system_invariants.html  trusted_setup.html  verification.html
src/: accumulator.rs  bn_solidity_utils.rs  constants.rs  error.rs  gate_sanity_checks.rs  kzg.rs  lib.rs  mimc7.rs  proof.rs  rng.rs  tests.rs  transcript.rs  utils.rs
src/caulk_plus/: mod.rs  precomputed.rs  proof.rs  prover.rs  verifier.rs
src/client/: main.rs
src/contracts/: Semacaulk.json  Verifier.json  foundry.toml  mod.rs  tests.rs
src/demo/: main.rs
src/gates/: gate_sanity_checks.rs  mimc7.rs  mod.rs  tests.rs  utils.rs
src/keccak_tree/: mod.rs
src/layouter/: mod.rs
src/multiopen/: fi.rs  mod.rs  prover.rs  verifier.rs
src/prover/: mod.rs  precomputed.rs  prover.rs  structs.rs
src/setup/: main.rs  mod.rs  (+1 more)
(+29 files in other folders)
