[package]
name = "semacaulk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "^0.3.0"
ark-std = "^0.3.0"
ark-bn254 = "^0.3.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
rand = "0.8"
