[package]
name = "semacaulk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
rand = "0.8"
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-poly-commit = { version = "^0.3.0", default-features = false }
digest = { version = "0.9" }

[dev-dependencies]
ark-bn254 = "0.3.0"
rand_chacha = { version = "0.3.0", default-features = false }
blake2 = { version = "0.9", default-features = false }
