[package]
name = "semacaulk"
version = "0.1.0"
edition = "2021"


[dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
rand = "0.8"
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
ark-poly-commit = { version = "^0.3.0", default-features = false }
digest = { version = "0.9" }
ethers = "1.0.2"
hex = "0.4.3"
semaphore = { git = "https://github.com/worldcoin/semaphore-rs", rev = "ee658c22684696232f68ef08beb8494280fb7da4" }
serde = "1.0"
ark-bn254 = "0.3.0"
sha3 = "0.10.6"
tokio = { version = "1.22.0", features = ["macros"] }
stopwatch = "0.0.7"
ppot-rs = "0.1.1"

[dev-dependencies]
rand_chacha = { version = "0.3.0", default-features = false }
blake2 = { version = "0.9", default-features = false }

[[bin]]
edition = "2021"
name = "setup"
path = "src/setup/main.rs"

[[bin]]
edition = "2021"
name = "demo"
path = "src/demo/main.rs"
